# GL_UI

./: CMakeLists.txt  main.cpp  plan.txt
gl/: DrawCall.cpp  DrawCall.h  DrawGroup.cpp  DrawGroup.h  Shader.cpp  Shader.h  Texture.cpp  Texture.h  UniformBufferObject.cpp  UniformBufferObject.h
io/: io.cpp
resources/shaders/circle/: shader.frag  shader.geom  shader.vert
resources/shaders/line/: shader.vert
resources/shaders/mandelbrot/: shader.frag  shader.vert
window/: Window.cpp  Window.h
